# upscale_image

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: analise_escala.md  especificação_tecnica.md  instalar_manualmente.md  passos_execução.md  plano_criação.md  plano_criação_passos.md  plano_otimizacao.md  plano_otimizacao_imagem.md  propósito_aplicação.md
docs/adr/: 0001-arquitetura-cli-local-monolitica.md  0002-persistencia-orientada-a-filesystem-e-runs.md  0003-configuracao-com-precedencia-cli-yaml-defaults.md  0004-contrato-de-modelo-e-registry.md  0005-pipeline-deterministico-e-estrategia-de-erros.md  0006-observabilidade-com-logs-manifesto-e-metricas.md  0007-stack-tecnologica-principal.md  README.md  (+7 more)
prompt/: README.md  control.yaml  execute_next_step.md  protocol.md
requirements/: base.txt  benchmark.txt  dev.txt  pdf.txt  performance.txt  realesrgan-extra.txt  requirements_spec_poc.md  swinir.txt
scripts/: export_onnx.py  export_tensorrt.py
tests/: test_async_worker.py  test_batch.py  test_batch_inference.py  test_benchmark_fr.py  test_benchmark_nr.py  test_bicubic_runner.py  test_compare.py  test_config.py  test_discovery.py  test_error_handling.py  test_html_report.py  test_integration.py  test_logger.py  test_manifest.py  test_measurements.py  test_model_contract.py  test_multi_gpu.py  test_onnx_runner.py  test_optimization.py  test_optimize_chained.py  test_page_preparer.py  test_pdf_compose.py  test_pdf_extraction.py  test_quickwins.py  test_realesrgan_runner.py  test_registry.py  test_run.py  test_swinir_runner.py  test_tensorrt_runner.py
(+98 files in other folders)
